index.en.html: Update and link to release notes

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -34,6 +34,7 @@
 
 <h2><font color="#DF8F06">Documentation (en)</font></h2>
 
+<!--
 <p>
 The Cooking version doesn't provide any Release Notes, major changes are
 announced on the web site and the <a href="http://labs.slitaz.org/">Labs</a>
@@ -41,21 +42,26 @@ provide fresh news about the project's activity. Like the stable version, you
 will find <a href="http://doc.slitaz.org/">documentation</a> on the wiki site
 and support on the community <a href="http://forum.slitaz.org/">forum</a>.
 </p>
-
-<!--
-<p>
-SliTaz GNU/Linux stable release is published with the project tools, 
-manuals and Release Notes installed on the system. Manuals and this page
-are accessible through the Openbox menu. Please check the 
-<a href="http://www.slitaz.org/en/">project page</a> for general 
-information on SliTaz. To use and configure the system you can read the 
-<a href="http://www.slitaz.org/en/doc/handbook/">Handbook</a>.
-Community documentation can be found on the
-<a href="http://wiki.slitaz.org/">SliTaz Wiki</a> and support on the SliTaz
-community <a href="http://forum.slitaz.org/#idx2">Forum</a>. 
-</p>
 -->
 
+<p>
+SliTaz GNU/Linux stable release is published with the project tools, 
+manuals and <a href="relnotes.en.html">Release Notes</a> installed on
+the system. Manuals and this page are accessible through the standard menu.
+Please check the <a href="http://www.slitaz.org/en/">project page</a> for
+general information on SliTaz. To use and configure the system you can
+read the <a href="http://doc.slitaz.org/en:handbook:start">Handbook</a>.
+Support can be found on the SliTaz mailing list or the community 
+<a href="http://forum.slitaz.org/#idx2">Forum</a>. 
+</p>
+
+<ul>
+	<li><a href="#start">Getting started guide</a></li>
+	<li><a href="relnotes.en.html">Release Notes for 3.0</a></li>
+	<li><a href="http://doc.slitaz.org/">Online Documentation</a></li>
+</ul>
+
+<a name="start"></a>
 <h2><font color="#DF8F06">Getting started</font></h2>
 
 <a name="network"></a>
