--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -89,7 +89,7 @@ web - you'll have to use the text based 'links' for example.
 </p>
 <p>
 SliTaz 3.0 provide all needed drivers and tools such has 915resolution to
-have support for wide range of netbooks (Eeepc, HP mini, etc).
+have support for wide range of netbooks (Eeepc, HP mini, Aspire One, etc).
 </p>
 
 <a name="livecd"></a>
