--- a/slitaz/relnotes.fr.html
+++ b/slitaz/relnotes.fr.html
@@ -35,8 +35,8 @@
 <h2><font color="#df8f06">Notes de publication</font></h2>
 
 <ul>
-	<li><a href="#overview">PrÃ©sentation.</a></li>
-	<li><a href="#hardware">MatÃ©riel supportÃ©.</a></li>
+	<li><a href="#overview">Présentation.</a></li>
+	<li><a href="#hardware">Matériel supporté.</a></li>
 	<li><a href="#livecd">LiveCD Flavors.</a></li>
 	<li><a href="#toolchain">Noyau et toolchain.</a></li>
 	<li><a href="#utf-8">Support UTF-8.</a></li>
@@ -44,48 +44,48 @@
 	<li><a href="#install">Installation sur disque dur etLiveUSB.</a></li>
 	<li><a href="#packages">Software Packages.</a></li>
 	<li><a href="#desktop">Core Desktop.</a></li>
-	<li><a href="#upgrade">de la 2.0 Ã  la 3.0.</a></li>
+	<li><a href="#upgrade">de la 2.0 à la 3.0.</a></li>
 	<li><a href="#people">Les membres du projets.</a></li>
 </ul>
 
 <a name="overview"></a>
-<h3><font color="#6c0023"></font>PrÃ©sentation</h3>
+<h3><font color="#6c0023"></font>Présentation</h3>
 <p>
-Bienvenue SliTaz 3.0! Petite, rapide, simple Ã  utiliser et personnaliser,
-la nouvelle version de stable de SliTaz paraÃ®t aprÃ¨s un an de dÃ©veloppement.
+Bienvenue SliTaz 3.0! Petite, rapide, simple à utiliser et personnaliser,
+la nouvelle version de stable de SliTaz paraît après un an de développement.
 
 </p>
 <ul>
-    <li>Scripts de dÃ©marrage rÃ©Ã©crits et plus rapide</li>
-    <li>AmÃ©lioration des outils maison</li>
+    <li>Scripts de démarrage réécrits et plus rapide</li>
+    <li>Amélioration des outils maison</li>
     <li>Better theme and integration</li>
-    <li>Adoption de Midori comme navigateur par dÃ©faut</li>
-    <li>Meilleurs support du matÃ©riel. En particulier les cartes wiFi</li>
+    <li>Adoption de Midori comme navigateur par défaut</li>
+    <li>Meilleurs support du matériel. En particulier les cartes wiFi</li>
     <li>Virtualisation rapide avec lguest</li>
     <li>SliTaz pro: OpenERP, LAMP, Glpi</li>
     <li>More contributors and stronger community</li>
-    <li>Simple Ã  personnaliser</li>
-    <li>Les paquets sont compilÃ©s automatiquement par un robot (le build bot Tazbb)</li>
-    <li>900 paquets ajoutÃ© et beaucoup mis Ã  jour</li>
-    <li>Plus de 2800 commits rÃ©alisÃ©s par les contributeurs</li>
+    <li>Simple à personnaliser</li>
+    <li>Les paquets sont compilés automatiquement par un robot (le build bot Tazbb)</li>
+    <li>900 paquets ajouté et beaucoup mis à jour</li>
+    <li>Plus de 2800 commits réalisés par les contributeurs</li>
 </ul>
 <p>
-L'assistance aux utilisateurs est assurÃ©s Ã  travers une liste de diffusion et le forum officiel:
+L'assistance aux utilisateurs est assurés à travers une liste de diffusion et le forum officiel:
  <a href="http://forum.slitaz.org/">forum.slitaz.org</a>
 </p>
 
 <a name="hardware"></a>
-<h3><font color="#6c0023">MatÃ©riel supportÃ©</font></h3>
+<h3><font color="#6c0023">Matériel supporté</font></h3>
 <p>
-SliTaz GNU/Linux supporte les machines Ã  base de processeurs Intel i486 ou x86 .
-Un minimum de 192Mo de mÃ©moire sont nÃ©cessaire pour utiliser le core LiveCD. 
+SliTaz GNU/Linux supporte les machines à base de processeurs Intel i486 ou x86 .
+Un minimum de 192Mo de mémoire sont nécessaire pour utiliser le core LiveCD. 
 64Mo pour la saveur "slitaz-loram" flavor et 16Mo pour la saveur "slitaz-loram-cdrom".
 </p>
 <p>
-Avec la saveur slitaz-loram, le systÃ¨me est moins rÃ©actif, mais permet une installation de
-SliTaz en mode graphique sur de trÃ¨s viÃ¨lles machines.
-Une fois installÃ©, SliTaz fontionne avec au minimum 16Mo de mÃ©moire. 
-Mais oubliÃ© Firefox pour surfer sur Internet ! PrÃ©fÃ©rez un navigateur en mode text, telque 'links' par exemple.
+Avec la saveur slitaz-loram, le système est moins réactif, mais permet une installation de
+SliTaz en mode graphique sur de très vièlles machines.
+Une fois installé, SliTaz fontionne avec au minimum 16Mo de mémoire. 
+Mais oublié Firefox pour surfer sur Internet ! Préférez un navigateur en mode text, telque 'links' par exemple.
 </p>
 <p>
 SliTaz 3.0 contient tous les pilotes et outils, comme 915resolution, pour fonctionner sur
@@ -93,9 +93,9 @@ une large gamme de netbooks (Eeepc, HP mini, Aspire One etc.).
 </p>
 
 <a name="livecd"></a>
-<h3><font color="#6c0023">LiveCD Ã  Saveurs</font></h3>
+<h3><font color="#6c0023">LiveCD à Saveurs</font></h3>
 <p>
-SliTaz GNU/Linux est distribuÃ©e sous la forme d'un LiveCD amorÃ§able
+SliTaz GNU/Linux est distribuée sous la forme d'un LiveCD amorçable
 
 SliTaz GNU/Linux is distributed as a bootable LiveCD allowing you to use
 it as a nomad system or graphically install to the hard drive and retain
