relnotes.en: first edit

--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -52,21 +52,21 @@
 <h3><font color="#6c0023"></font>Overview</h3>
 <p>
 Welcome to SliTaz 3.0! Small, fast, easy to use and customize, the new
-SliTaz stable version is out after one year of development.
+SliTaz stable version is now out after one year of development.
 </p>
 <ul>
-    <li>Boot scripts rewrite and faster</li>
+    <li>Boot scripts rewritten and faster</li>
     <li>All home-made boxes improved</li>
-    <li>Better theme and integration</li>
-    <li>Switch to Midori has default web browser</li>
-    <li>Better hardware support mainly wifi card</li>
-    <li>Fast virtualization with lguest</li>
+    <li>Better themes and integration</li>
+    <li>Switch to Midori as the default web browser</li>
+    <li>Better hardware support - mainly wifi cards</li>
+    <li>Faster virtualization with lguest</li>
     <li>SliTaz pro: OpenERP, LAMP, Glpi</li>
     <li>More contributors and stronger community</li>
     <li>Easier to customize</li>
-    <li>Packages are now automaticaly built by a build bot (Tazbb)</li>
-    <li>900 packages added in the database and many update</li>
-    <li>More than 2800 commit by contributors</li>
+    <li>Packages are now automatically built by a build bot (Tazbb)</li>
+    <li>900 packages added to the database and many updates</li>
+    <li>More than 2800 commits by contributors</li>
 </ul>
 <p>
 Technical support is provided to users via the mailing list and the official
@@ -76,7 +76,7 @@ forum: <a href="http://forum.slitaz.org/">forum.slitaz.org</a>
 <a name="hardware"></a>
 <h3><font color="#6c0023">Supported Hardware</font></h3>
 <p>
-SliTaz GNU/Linux supports all machines based on i486 or x86 Intel compatible
+SliTaz GNU/Linux supports all machines based on the i486 or x86 Intel compatible
 processors. A minimum 192MB of memory is recommended to use the core LiveCD. 
 64MB is needed for the "slitaz-loram" flavor and 16MB for the 
 "slitaz-loram-cdrom" flavor.
@@ -88,15 +88,15 @@ well with a minimum of 16MB memory, but forget about using Firefox to surf the
 web - you'll have to use the text based 'links' for example.  
 </p>
 <p>
-SliTaz 3.0 provide all needed drivers and tools such has 915resolution to
-have support for wide range of netbooks (Eeepc, HP mini, Aspire One, etc).
+SliTaz 3.0 provides all needed drivers and tools such as 915resolution to
+have support for a wide range of netbooks (Eeepc, HP mini, Aspire One, etc).
 </p>
 
 <a name="livecd"></a>
 <h3><font color="#6c0023">LiveCD Flavors</font></h3>
 <p>
 SliTaz GNU/Linux is distributed as a bootable LiveCD allowing you to use
-it as a nomad system or graphically install to the hard drive and retain
+it as a nomal system or graphically install to the hard drive and retain
 the use of your previous system including all settings, applications, 
 documents, etc. 
 </p>
@@ -111,12 +111,12 @@ with the "Tazlito" tool.
 <h3><font color="#6c0023">Kernel and toolchain</font></h3>
 <p>
 SliTaz 3.0 comes with a new but very well tested Kernel and a complete new
-toolchain from witch the all system is build. The Linux kernel version is 2.6.30.6
-who is split in separate package for additionnal driver or features. This time
-we also built-in some more drivers to have a faster kernel boot.
+toolchain from which the whole system is built. The Linux kernel version is 2.6.30.6
+which is split into separate packages for additional drivers or features. This time
+we have also built-in some more drivers to have a faster kernel boot.
 </p>
 <p>
-The new toolchain comprise: Binutils 2.19.1, GCC 4.4.1, Glibc 2.10.1
+The new toolchain comprises of: Binutils 2.19.1, GCC 4.4.1, Glibc 2.10.1
 </p>
 
 <a name="utf-8"></a>
@@ -130,41 +130,41 @@ The new toolchain comprise: Binutils 2.19.1, GCC 4.4.1, Glibc 2.10.1
 <p>
 The installation is fully automated and can be done graphically or in text
 mode. In this version the installer will let you use a separate partition for
-/home, configure root password and chose default user login. Installer now
-also support intallation from a LiveUSB session.
+/home, configure the root password and chose the default user login. The installer also
+now supports installation from a LiveUSB session.
 </p>
 <p>
-Full USB install are also supported and some time needs a <code>rootdelay=10</code>
+Full USB install is also supported and some time is needed using <code>rootdelay=10</code>
 as a kernel argument (in GRUB menu.lst).
 </p>
 
 <a name="packages"></a>
 <h3><font color="#6c0023">Software Packages</font></h3>
 <p>
-SliTaz 3.0 have 2291 package in the database, a wide variety of packages
+SliTaz 3.0 has 2291 packages in the database. A wide variety of packages
 have been commited and many force went to professionnal grade software such
 as OpenERP, MySQL, Glpi.
 </p>
 <p>
-On the update side, mainly all the packages have been update, including
-the kernel, all the toolchain, Xorg (7.4), GTK and QT. Package format have
-also changed and now use lzma for better compression. Packages are also
-checked by Tazwok to ensure FSH is followed and built automaticaly by 
-SliTaz Build Bot: <a href="http://bb.slitaz.org/">bb.slitaz.org</a>
+On the update side, mainly all the packages have been updated, including
+the kernel, the toolchain, Xorg (7.4), GTK and QT. Package formats have
+also changed and we now use lzma for better compression. Packages are also
+checked by Tazwok to ensure the FSH is followed and packages are built 
+automatically by the SliTaz Build Bot: <a href="http://bb.slitaz.org/">bb.slitaz.org</a>
 </p>
 
 <a name="desktop"></a>
 <h3><font color="#6c0023">Core Desktop</font></h3>
 <p>
-The core desktop provide a selection of multi-use packages for surfing the
+The core desktop provides a selection of multi-use packages for surfing the
 web, listening to music, audio editing, image manipulation, developing or 
-burning to optical media. It's just one click in the  application menu to
-find software installed by category.
+burning to optical media. It's just one click in the application menu to
+find any software installed by category.
 </p>
 <p>
-A lot of attention have been ported the the core desktop, all applications
-are well integrate and a special SliTaz theme (icons, Openbox, GTK) have
-been done.
+A lot of attention has been paid the the core desktop, all applications
+are well integrated and a special SliTaz theme (icons, Openbox, GTK) has
+been created.
 </p>
 
 <a name="security"></a>
@@ -174,7 +174,7 @@ packages + mountbox: dmsetup linux-md devmapper
 </p>
 
 <a name="upgrade"></a>
-<h3><font color="#6c0023">From 1.0 to 2.0</font></h3>
+<h3><font color="#6c0023">From 2.0 to 3.0</font></h3>
 <p>
 The SliTaz GNU/linux installer offers an update function allowing you to
 upgrade from a '2.0' to '3.0' version. To upgrade the system you first
@@ -191,8 +191,8 @@ archive of the /etc directory (etc.tar.gz) in /var/lib/slitaz-install.
 <p>
 To upgrade a 2.0 to 3.0 it is also possible to use the package manager "Tazpkg" 
 via the 'set-release' function, but beware this is not yet proven and may 
-require some manual intervention. If you choose this way you must first
-install 'tazpkg' from 3.0, because package format have change.
+require some manual intervention. If you choose this method you must first
+install 'tazpkg' from 3.0, because the package format has changed.
 </p>
 
 <a name="people"></a>
@@ -247,7 +247,7 @@ who have taken the time to help advance the distribution.
 
 <div id="copy">
 	Copyright &copy; 2009 <a href="http://www.slitaz.org/">SliTaz</a> -
-	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br>
+	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
 	Documentation published under
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
 	and <a href="http://validator.w3.org/">xHTML 1.0 valid</a>.
