relnotes-en: tiny edit.

--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -143,13 +143,13 @@ as a kernel argument (in GRUB menu.lst).
 <p>
 SliTaz 3.0 has 2291 packages in the database. A wide variety of packages
 have been commited and many force went to professionnal grade software such
-as OpenERP, MySQL, Glpi.
+as OpenERP, MySQL, GLPI.
 </p>
 <p>
 On the update side, mainly all the packages have been updated, including
 the kernel, the toolchain, Xorg (7.4), GTK and QT. Package formats have
 also changed and we now use lzma for better compression. Packages are also
-checked by Tazwok to ensure the FSH is followed and packages are built 
+checked by Tazwok to ensure the FHS is followed and packages are built 
 automatically by the SliTaz Build Bot: <a href="http://bb.slitaz.org/">bb.slitaz.org</a>
 </p>
 
