--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -51,20 +51,21 @@
 <a name="overview"></a>
 <h3><font color="#6c0023"></font>Overview</h3>
 <p>
-Welcome to SliTaz 3.0! Small, fast, easy to use and customize, the new
-SliTaz stable version is now out after one year of development.
+Welcome to SliTaz 3.0! Its simpler, faster, customizable, mightier and yet incredibly tiny. The new SliTaz stable version is now out after one year of development.  
 </p>
 <ul>
-    <li>Boot scripts rewritten and faster</li>
-    <li>All home-made boxes improved</li>
-    <li>Better themes and integration</li>
+    <li>Boot scripts rewritten and supports super-fast booting</li>
+    <li>Many new features included in all home-made boxes (tazctrlbox, tazhw, wifibox, burnbox, mountbox, netbox, serverbox, sliTaz installer)</li>
+    <li>Switch to Xorg from Xvesa</li>
     <li>Switch to Midori as the default web browser</li>
-    <li>Better hardware support - mainly wifi cards</li>
+    <li>Better hardware support - wifi cards, webcams, 3G-modems, printers, scanners</li>
+    <li>Better themes and desktop integration</li>
     <li>Faster virtualization with lguest</li>
     <li>SliTaz pro: OpenERP, LAMP, Glpi</li>
-    <li>More contributors and stronger community</li>
-    <li>Easier to customize</li>
+    <li>Easier to customize liveCD and liveUSB with tazlitobox and tazusbbox</li>
+    <li>Tazpkg supports new features including the conversion of deb/rpm/arch/slackware/ipk packages to Slitaz native format</li>
     <li>Packages are now automatically built by a build bot (Tazbb)</li>
+    <li>More contributors and stronger community</li>
     <li>900 packages added to the database and many updates</li>
     <li>More than 2800 commits by contributors</li>
 </ul>
@@ -82,23 +83,23 @@ processors. A minimum 192MB of memory is recommended to use the core LiveCD.
 "slitaz-loram-cdrom" flavor.
 </p>
 <p>
-With the slitaz-loram flavor, the system is less responsive, but allows you to
-graphically install SliTaz on very old machines. Once installed, SliTaz works
-well with a minimum of 16MB memory, but forget about using Firefox to surf the 
-web - you'll have to use the text based 'links' for example.  
-</p>
-<p>
 SliTaz 3.0 provides all needed drivers and tools such as 915resolution to
 have support for a wide range of netbooks (Eeepc, HP mini, Aspire One, etc).
 </p>
 
+<p>
+The slitaz-loram flavor allows to graphically install SliTaz on very old machines with constrained resources.
+The liveCD may be less responsive, but once installed, SliTaz works
+well with a minimum of 16MB memory. On very old machines, you may be better off
+using a text based browser such as 'links'.  
+</p>
+
+
 <a name="livecd"></a>
 <h3><font color="#6c0023">LiveCD Flavors</font></h3>
 <p>
-SliTaz GNU/Linux is distributed as a bootable LiveCD allowing you to use
-it as a nomal system or graphically install to the hard drive and retain
-the use of your previous system including all settings, applications, 
-documents, etc. 
+SliTaz GNU/Linux is distributed as a bootable LiveCD. You can use the LiveCD as a normal system or you can 
+graphically install Slitaz to the hard drive. Installing/upgrading Slitaz retains your previous system's settings, applications and documents. 
 </p>
 <p>
 The LiveCD can also be customised and easily rebuilt both graphically or from
@@ -110,9 +111,9 @@ with the "Tazlito" tool.
 <a name="toolchain"></a>
 <h3><font color="#6c0023">Kernel and toolchain</font></h3>
 <p>
-SliTaz 3.0 comes with a new but very well tested Kernel and a complete new
-toolchain from which the whole system is built. The Linux kernel version is 2.6.30.6
-which is split into separate packages for additional drivers or features. This time
+SliTaz 3.0 comes with a new but very well tested 2.6.30.6 Linux kernel and a complete new
+build toolchain from which the whole system has been built. The 2.6.30.6 Linux kernel is 
+separated into several linux-packages for supporting additional drivers and features. This time
 we have also built-in some more drivers to have a faster kernel boot.
 </p>
 <p>
@@ -121,23 +122,29 @@ The new toolchain comprises of: Binutils 2.19.1, GCC 4.4.1, Glibc 2.10.1
 
 <a name="utf-8"></a>
 <h3><font color="#6c0023">UTF-8 support</font></h3>
+With this release, Slitaz community can enjoy full UTF-8 support.
+It uses standard PO files for the translation of all SliTaz related tools, boxes and utilities.
+With better internationalization support (russian, portuguese, chinese, arabic and many more), 
+contributors can now use graphical tools such as poedit to make translations using GNU gettext standards. 
+The labs also have a i18n project to easily upload files to be included in the distribution. 
+The locale packs have more translated application(s) messages for the core system and 
+some extra packages for applications such as Gimp, Abiword, Gnumeric, etc.
 
 <a name="xorg"></a>
 <h3><font color="#6c0023">Xorg server</font></h3>
 <p>
-SliTaz now uses the Xorg X window system (although we will always try to 
-provide a Xvesa flavor). With the tazx utility you can reconfigure Xorg and 
+SliTaz now uses the Xorg X window system. With the tazx utility, you can reconfigure Xorg and 
 select the correct driver for your card. The xorg server comes with the vesa 
-driver by default which powers most cards; although you may still need to 
-manually configure your xorg.conf to some degree if you install some of the
-other drivers.
+driver by default which powers most cards. However, if you install some of the
+other xorg video drivers, you may need to manually configure your xorg.conf.
+We also hope that our growing community would be able to provide and support an official Xvesa flavor.
 </p>
 
 <a name="install"></a>
 <h3><font color="#6c0023">HD install and LiveUSB</font></h3>
 <p>
 The installation is fully automated and can be done graphically or in text
-mode. In this version the installer will let you use a separate partition for
+mode. The slitaz installer now lets you use a separate partition for
 /home, configure the root password and chose the default user login. The installer also
 now supports installation from a LiveUSB session.
 </p>
@@ -150,35 +157,39 @@ as a kernel argument (in GRUB menu.lst).
 <h3><font color="#6c0023">Software Packages</font></h3>
 <p>
 SliTaz 3.0 has 2291 packages in the database. A wide variety of packages
-have been commited and many force went to professionnal grade software such
-as OpenERP, MySQL, GLPI.
+have been commited. 
+Tazpkg package manager also supports converting deb/rpm/arch/slackware/ipk packages to Slitaz native format
+A lot of time was also spent maintaining many professionnal grade software such as OpenERP, MySQL, GLPI.
 </p>
 <p>
-On the update side, mainly all the packages have been updated, including
-the kernel, the toolchain, Xorg (7.4), GTK and QT. Package formats have
-also changed and we now use lzma for better compression. Packages are also
-checked by Tazwok to ensure the FHS is followed and packages are built 
+On the update side, mostly all the packages have been updated, including
+the kernel, the toolchain, Xorg (7.4), GTK and QT. Package format has
+also changed to support lzma for better compression and faster package downloads.
+Packages are also checked by Tazwok to ensure the FHS is followed. Packages are now built 
 automatically by the SliTaz Build Bot: <a href="http://bb.slitaz.org/">bb.slitaz.org</a>
 </p>
 
 <a name="desktop"></a>
 <h3><font color="#6c0023">Core Desktop</font></h3>
 <p>
-The core desktop provides a selection of multi-use packages for surfing the
-web, listening to music, audio editing, image manipulation, developing or 
-burning to optical media. It's just one click in the application menu to
-find any software installed by category.
-</p>
-<p>
-A lot of attention has been paid the the core desktop, all applications
+A lot of attention has been paid the the core desktop. All applications
 are well integrated and a special SliTaz theme (icons, Openbox, GTK) has
 been created.
 </p>
+<p>
+The core desktop provides a selection of multi-use packages for surfing the
+web, listening to music, audio editing, image manipulation and developing or 
+burning to optical media. One click application menu helps to find installed software by categories.
+</p>
+
 
 <a name="security"></a>
 <h3><font color="#6c0023">Security</font></h3>
 <p>
-packages + mountbox: dmsetup linux-md devmapper
+Slitaz is more secured and robust now. Firewall rules have been updated. A firewall can be installed using graphical tazhw box. 
+The serverbox can help to maintain the installed firewall. 
+Mountbox can manage crypto device with devmapper. Mountbox packages dependencies: dmsetup linux-md devmapper.
+Crypt setup tools allow encryption of block devices.
 </p>
 
 <a name="upgrade"></a>
@@ -209,7 +220,7 @@ install 'tazpkg' from 3.0, because the package format has changed.
 SliTaz is proud to be an international community project. The people of the
 project are the ones who develop the distribution, correct the website,
 develop the HG repositories and write the official documentation. Passing
-through Switzerland, France, Brazil, Quebec, China, Russia, England, 
+through Switzerland, France, Brazil, Quebec, China, India, Russia, England, 
 and the U.S.
 </p>
 <ul>
